apps/services/scanopy/service-scanopy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scanopy
  namespace: scanopy
spec:
  selector:
    app: scanopy
  ports:
    - name: http
      protocol: TCP
      port: 60072
      targetPort: 60072
  type: ClusterIP
